--- a/tri-harder/package.json
+++ b/tri-harder/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/print": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "npm": "^10.8.1",
+    "pdfjs-dist": "^3.6.172",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
